# Obsidian-Knowledge-Graph

./: .env.example  .gitignore  README.md  USAGE_GUIDE.md  com.hmkwon.obsidian-kg-web.plist  debug_neo4j.py  docker-compose.yml  pyproject.toml
src/obsidian_kg/: __init__.py  cli.py  config.py  graph_builder.py  parser.py  schema.py  watcher.py  web.py
src/obsidian_kg/static/: index.html
tests/: test_parser.py
